--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_forgot_pass">ForgotPassActivity</string>
+    <string name="title_activity_restaurent">RestaurentActivity</string>
 </resources>
