--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,10 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_forgot_pass">ForgotPassActivity</string>
+
+
     <string name="title_activity_restaurent">RestaurentActivity</string>
+
+    <string name="facebook_app_id">659139777865159</string>
+    <string name="facebook_login_protocol_name">fb659139777865159</string>
 </resources>
